@@ -1,3 +1,8 @@
+2008-05-30  Andreas K. Foerster  <info@akfoerster.de>
+
+	* avatar.c:
+	support LINK_SDL_IMAGE definition
+
 2008-05-29  Andreas K. Foerster  <info@akfoerster.de>
 
 	* avatar.c:
